--- a/themes/butterfly/layout/includes/layout.pug
+++ b/themes/butterfly/layout/includes/layout.pug
@@ -1,63 +1,35 @@
-- var globalPageType = getPageType(page, is_home)
-- var htmlClassHideAside = theme.aside.enable && theme.aside.hide ? 'hide-aside' : ''
-- page.aside = globalPageType === 'archive' ? theme.aside.display.archive: globalPageType === 'category' ? theme.aside.display.category : globalPageType === 'tag' ? theme.aside.display.tag : page.aside
-- var hideAside = !theme.aside.enable || page.aside === false ? 'hide-aside' : ''
-- var pageType = globalPageType === 'post' ? 'post' : 'page'
-- pageType = page.type ? pageType + ' type-' + page.type : pageType
-
-doctype html
-html(lang=config.language data-theme=theme.display_mode class=htmlClassHideAside)
-  head
-    include ./head.pug
-  body
-	block content 
-  // 你的内容 
+<!DOCTYPE html>
+html(lang=config.language  data-theme=theme.display_mode) 
+  head 
+    include ./head.pug  
+  body 
+    // 在</body>标签之前添加 
+    div.image-overlay  
+      img.enlarged-image(src='') 
+      div.close-overlay  × 
  
-// 添加 JavaScript 代码 
-script.
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/sw.js',  { scope: '/' })
-      .then(registration => {
-        registration.onupdatefound  = () => {
-          const installingWorker = registration.installing; 
-          installingWorker.onstatechange  = () => {
-            if (installingWorker.state  === 'installed') {
-              caches.keys().then(cacheNames  => {
-                cacheNames.forEach(cacheName  => {
-                  if (cacheName.startsWith('static-v'))  {
-                    caches.delete(cacheName); 
-                  }
-                });
-              });
-            }
-          };
-        };
-      });
-  }
     !=partial('includes/loading/index', {}, {cache: true})
-
-    if theme.background
-      #web_bg(style=getBgPath(theme.background))
-
+ 
+    if theme.background  
+      #web_bg(style=getBgPath(theme.background)) 
+ 
     !=partial('includes/sidebar', {}, {cache: true})
-
+ 
     #body-wrap(class=pageType)
-      include ./header/index.pug
-
-      main#content-inner.layout(class=hideAside)
-        if body
-          div!= body
-        else
-          block content
-          if theme.aside.enable && page.aside !== false
-            include widget/index.pug
-
-      - const footerBg = theme.footer_img
+      include ./header/index.pug  
+ 
+      main#content-inner.layout(class=hideAside) 
+        if body 
+          div!= body 
+        else 
+          block content 
+          if theme.aside.enable  && page.aside  !== false 
+            include widget/index.pug  
+ 
+      - const footerBg = theme.footer_img  
       - const footer_bg = footerBg ? footerBg === true ? bg_img : getBgPath(footerBg) : ''
       footer#footer(style=footer_bg)
         !=partial('includes/footer', {}, {cache: true})
-
-    include ./rightside.pug
-    include ./additional-js.pug
-link(rel='stylesheet', href='/css/index.css?v=#{version}') 
-script(src='/js/main.js?t=#{timestamp}') 
+ 
+    include ./rightside.pug  
+    include ./additional-js.pug  
