--- a/themes/butterfly/source/css/_layout/aside.styl
+++ b/themes/butterfly/source/css/_layout/aside.styl
@@ -15,6 +15,7 @@
     @extend .cardHover
     position: relative
     overflow: hidden
+    background: rgba(114, 118, 139, .08) !important
     margin-bottom: 20px
     padding: 20px 24px
 
