--- a/themes/butterfly/layout/includes/rightside.pug
+++ b/themes/butterfly/layout/includes/rightside.pug
@@ -31,7 +31,7 @@ mixin rightsideItem(array)
             i.fas.fa-comments
       when 'bg'  
         button(type="button" title='切换背景' onclick="toggleWinbox()")
-          i.fas.fa-display
+          i.fas.fa-gears
 
 #rightside
   - const { enable, hide, show } = theme.rightside_item_order
