--- a/themes/butterfly/source/css/_global/index.styl
+++ b/themes/butterfly/source/css/_global/index.styl
@@ -43,7 +43,7 @@ body
   position: relative
   overflow-y: scroll
   min-height: 100%
-  background: rgba(114, 118, 139, .08)
+  background: var(--global-bg)
   color: var(--font-color)
   font-size: var(--global-font-size)
   font-family: $font-family
