--- a/themes/butterfly/source/css/_global/function.styl
+++ b/themes/butterfly/source/css/_global/function.styl
@@ -24,7 +24,7 @@ addBorderRadius(x = 6, hide = false)
 
 // card hover
 .cardHover
-  background: rgba(114, 118, 139, .08)
+  background: var(--card-bg)
   box-shadow: var(--card-box-shadow)
   transition: all .3s
   addBorderRadius(8)
