--- a/themes/butterfly/source/css/_layout/head.styl
+++ b/themes/butterfly/source/css/_layout/head.styl
@@ -1,7 +1,7 @@
 #page-header
   position: relative
   width: 100%
-  background-color: rgba(114, 118, 139, .08)
+  background-color: $light-blue
   background-position: center center
   background-size: cover
   background-repeat: no-repeat
